[package]
name = "rust_lib_easytier_connect_flutter"
version = "0.1.0"
edition = "2021"

[lib]
# 仅编译为动态库（cdylib），以满足 LGPL v3.0 合规要求。
# EasyTier 作为 LGPL-3.0 库，必须以动态链接方式使用，自有代码方可保持闭源。
crate-type = ["cdylib"]

[dependencies]
easytier = { git = "https://github.com/EasyTier/EasyTier", tag = "v2.6.4", version = "2.6.4" }
flutter_rust_bridge = "=2.12.0"

# C FFI 依赖
dashmap = "6.0"
once_cell = "1.18.0"
serde_json = "1.0"
uuid = "1.17.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
